use rdocumentation.org

--- a/tutorial/html/configureMlr/index.html
+++ b/tutorial/html/configureMlr/index.html
@@ -202,7 +202,7 @@ certain ways.
 Actually <strong>mlr</strong> is just designed to make errors due to typos or
 invalid parameter values as unlikely as possible. But sometimes you want to
 break those barriers and get full access. For all parameters, simply refer
-to the documentation of <a href="../../../man/configureMlr.html">configureMlr</a>.</p>
+to the documentation of <a href="http://www.rdocumentation.org/packages/mlr/functions/configureMlr.html">configureMlr</a>.</p>
 <p>You are bothered by all the output on the console like in this example?</p>
 <pre class="prettyprint well"><code class="r">## Define a learning task and an appropriate learner
 task = makeClassifTask(data = iris, target = &quot;Species&quot;)
