--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -208,8 +208,8 @@ others are not, but the package is specifically designed to make
 extensions simple. If your favorite methods is missing, either
 send the <strong>mlr</strong> maintainers an email or see the part of the tutorial
 on <a href="../create_learner/">how to extend the package yourself</a>.</p>
-<p>To see which learners are already implemented, have a look at the <a href="../../../man/learners.html">learners</a> documentation page.</p>
-<p>A learner in <strong>mlr</strong> is constructed by calling <a href="../../../man/makeLearner.html">makeLearner</a>.
+<p>To see which learners are already implemented, have a look at the <a href="http://www.rdocumentation.org/packages/mlr/functions/learners.html">learners</a> documentation page.</p>
+<p>A learner in <strong>mlr</strong> is constructed by calling <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">makeLearner</a>.
 In the constructor you can do the following things:</p>
 <ul>
 <li>Set hyperparameters.</li>
@@ -249,7 +249,7 @@ classification methods, <code>regr.&lt;R_method_name&gt;</code> for regression m
 <code>surv.&lt;R_method_name&gt;</code> for survival analysis, and <code>cluster.&lt;R_method_name&gt;</code>
 for clustering methods.</p>
 <h2 id="further-information">Further information</h2>
-<p>The generated learner is an object of class <a href="../../../man/makeLearner.html">Learner</a>.
+<p>The generated learner is an object of class [Learner](http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html.
 It contains the properties the method, e.g. which types of features it can handle,
 what can be output during prediction, whether multi-class problems,
 observations weights or missing values are supported and so on.</p>
