--- a/tutorial/html/parallelization/index.html
+++ b/tutorial/html/parallelization/index.html
@@ -198,10 +198,10 @@
 
 <h1 id="parallelization">Parallelization</h1>
 <p><em>R</em> by default doesn't make use of multiple cores.
-With the integration of
-<a href="https://github.com/berndbischl/parallelMap">parallelMap</a> into <strong>mlr</strong>, it
-becomes easy to activate the parallel computing capabilities already supported
-by <strong>mlr</strong>.</p>
+With the integration of <a href="https://github.com/berndbischl/parallelMap">parallelMap</a> into <strong>mlr</strong>, it becomes easy to activate the parallel computing capabilities already supported by <strong>mlr</strong>.</p>
+<p>All you have to do is select an interface by calling one of the <code>parallelStart*</code> functions.
+The first annotated loop <strong>mlr</strong> encounters will then be automatically parallelized.
+Afterwards it is good practice to call <code>parallelStop()</code>.</p>
 <pre class="prettyprint well"><code class="r">library(&quot;parallelMap&quot;)
 parallelStartSocket(2)
 </code></pre>
@@ -231,9 +231,17 @@ r = resample(lrn, task, rdesc)
 <pre class="prettyprint well"><code>## Stopped parallelization. All cleaned up.
 </code></pre>
 
-<p>In Linux or Mac OS X, you may want to use <code>parallelStartMulticore()</code> instead.</p>
-<p>For further ways of parallelizing your computations, consult the <a href="https://github.com/berndbischl/parallelMap#parallelmap">parallelMap
-tutorial</a> and help.</p>
+<p>In Linux or Mac OS X, you may want to use <code>parallelStartMulticore()</code> instead.
+We over different parallelization levels for fine grain control over the parallelization.
+E.g., if you do not want to parallelize the <code>benchmark()</code> function because it has only very few iterations but want to parallelize the resampling of each learner instead, you can specifically pass the level <code>"resample"</code> to the <code>parallelStart*</code> function.
+Currently the following levels are supported:</p>
+<pre class="prettyprint well"><code class="r">parallelShowRegisteredLevels()
+</code></pre>
+
+<pre class="prettyprint well"><code>## mlr                 : benchmark,resample,selectFeatures,tuneParams
+</code></pre>
+
+<p>For further ways of parallelizing your computations, consult the <a href="https://github.com/berndbischl/parallelMap#parallelmap">parallelMap tutorial</a> and help.</p>
 </div>
         </div>
 
