--- a/tutorial/html/learner/index.html
+++ b/tutorial/html/learner/index.html
@@ -249,7 +249,7 @@ classification methods, <code>regr.&lt;R_method_name&gt;</code> for regression m
 <code>surv.&lt;R_method_name&gt;</code> for survival analysis, and <code>cluster.&lt;R_method_name&gt;</code>
 for clustering methods.</p>
 <h2 id="further-information">Further information</h2>
-<p>The generated learner is an object of class [Learner](http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html.
+<p>The generated learner is an object of class <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a>.
 It contains the properties the method, e.g. which types of features it can handle,
 what can be output during prediction, whether multi-class problems,
 observations weights or missing values are supported and so on.</p>
