--- a/tutorial/html/create_measure/index.html
+++ b/tutorial/html/create_measure/index.html
@@ -210,7 +210,7 @@ measure. Below, this is exemplified by an implementation of the mean
 misclassification error (mmce) for the iris dataset. For this purpose we write a simple
 function that computes the measure on the basis of the predictions and subsequently wrap it
 in a <a href="http://www.rdocumentation.org/packages/mlr/functions/Measure.html">Measure</a> object. Then, we work with it as usual with the
-<a href="http://berndbischl.github.io/mlr/man/performance.html">performance</a> function.
+<a href="http://www.rdocumentation.org/packages/mlr/functions/performance.html">performance</a> function.
 See the R documentation of the <a href="http://www.rdocumentation.org/packages/mlr/functions/makeMeasure.html">makeMeasure</a> function for details on the
 various parameters.</p>
 <pre class="prettyprint well"><code class="r"># Define the measure.
